--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+@font-face {
+  font-family: shrikhand;
+  src: url(../sass/police/shrihand/Shrikhand-Regular.ttf);
+}
+@font-face {
+  font-family: roboto;
+  src: url(../sass/police/roboto/Roboto-Regular.ttf);
+}
 body {
   margin: 0px;
+  font-family: roboto;
 }
 
 .image-header {
@@ -13,20 +21,136 @@ body {
 }
 
 .formulaire {
-  background-color: #e7e4e4;
-  box-shadow: inset #c3bcbc 1px 4px 4px;
+  display: flex;
+  flex-direction: column;
+}
+
+.recherche {
+  background-color: rgba(231, 228, 228, 0.6509803922);
+  box-shadow: inset rgba(195, 188, 188, 0.6509803922) 1px 4px 4px;
   padding: 16px;
   gap: 10px;
   display: flex;
   justify-content: center;
 }
-.formulaire__adresse {
-  background-color: #e7e4e4;
+.recherche__adresse {
+  background-color: initial;
   border: none;
+  font-weight: 700;
 }
 
-.resto {
-  font-family: shrikhand;
+.form {
+  background-color: rgba(242, 242, 242, 0.6);
+  display: flex;
+  flex-direction: column;
+  padding: 36px 21px 45px 21px;
+}
+.form__title {
+  margin: 0px;
+  text-align: center;
+  padding-bottom: 12px;
+}
+.form__subtitle {
+  margin: 0px;
+  text-align: center;
+  padding-bottom: 12px;
+}
+.form__btn {
+  text-align: center;
+  padding-top: 14px;
+}
+.form .btn-explorez {
+  border: none;
+  font-family: "roboto";
+  color: #fff;
+  font-size: 15px;
+  background-color: aqua;
+  border-radius: 25px;
+  width: 72%;
+  padding: 14px;
+  cursor: pointer;
+  background: linear-gradient(#ff79da, #9356dc);
+  box-shadow: rgba(152, 148, 148, 0.7215686275) 0px 5px 9px;
+}
+.form .btn-explorez:hover {
+  box-shadow: rgba(127, 122, 122, 0.7215686275) 0px 5px 9px;
+  background: linear-gradient(#ff83dd, #985ede);
+}
+
+.fonctionnement {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 18px;
+  margin-bottom: 20px;
+}
+.fonctionnement__title {
+  font-weight: 700;
+}
+
+.btn-acceuil {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.btn-acceuil__menu {
+  background-color: rgba(240, 240, 240, 0.4705882353);
+  box-shadow: rgba(202, 200, 200, 0.72) 0px 5px 9px;
+  padding: 25px;
+  margin-bottom: 24px;
+  border-radius: 16px;
+  border: none;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 14px;
+  cursor: pointer;
+}
+.btn-acceuil__menu:hover {
+  box-shadow: rgba(164, 161, 161, 0.7215686275) 0px 5px 9px;
+  background: #f2eafb;
+}
+.btn-acceuil__menu:hover .color {
+  color: #9356dc;
+}
+.btn-acceuil__menu .color {
+  color: gray;
+  font-size: 16px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.list-resto {
+  background-color: rgba(231, 228, 228, 0.6509803922);
+}
+.list-resto .restaurant {
+  display: flex;
+  flex-direction: column;
+}
+.list-resto .restaurant__article {
+  width: 90%;
+}
+.list-resto .restaurant__cards {
+  margin: 0px;
+  background-color: #fff;
+}
+.list-resto .restaurant__photo {
+  object-fit: cover;
+  height: 153px;
+  width: 100%;
+}
+.list-resto .restaurant__nom {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.list-resto .restaurant__nom p h4 {
+  margin: 0px;
 }
 
 .footer {
@@ -39,6 +163,7 @@ body {
   font-size: 17px;
   margin: 0px;
   padding-bottom: 20px;
+  font-weight: normal;
 }
 
 .menu-footer {
@@ -58,17 +183,15 @@ body {
   display: flex;
   align-items: center;
 }
-.menu-footer__link:hover {
-  color: blue;
-  margin: 0px;
-}
-
-.fa-utensils {
+.menu-footer__link--icon .fa-utensils {
   font-size: 16px;
 }
-
-.fa-handshake-angle {
+.menu-footer__link--icon .fa-handshake-angle {
   font-size: 11px;
+}
+.menu-footer__link:hover {
+  color: blue;
+  margin: 0px 20px 24px;
 }
 
 /*# sourceMappingURL=styles.css.map */
