--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,19 +1,6 @@
-@font-face {
-    font-family: shrikhand;
-    src: url(../sass/police/shrihand/Shrikhand-Regular.ttf);
-}
+@import "../sass/utils/_variables.scss";
+@import "../sass/utils/_typography.scss";
 
-@font-face {
-    font-family: roboto;
-    src: url(../sass/police/roboto/Roboto-Regular.ttf);
-}
-
-
-@mixin police-titre {
-font-family: shrikhand;
-color: white;
-font-size: 17px;
-}
 
 @mixin link-footer {
     gap: 10px;
@@ -27,20 +14,6 @@ font-size: 17px;
     text-align: center;
     padding-bottom: 12px;
 }
-
-
-$color-primaire: #9356dc;
-$color-secondaire: #ff79da;
-$color-tertiaire: #99e2d0;
-$background-gris-clair: #e7e4e4a6;
-$color: blue;
-$color-link: #fff;
-$background-footer: #464646;
-$ombre-btn: #cac8c8b8;
-
-$margin: 0px 20px 24px;
-$padding: 0px 14px 20px 10px 6px 16px 18px 25px;
-$size: 11px 15px 16px 17px;
 
 
 
