--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,19 +1,8 @@
-@import "../sass/utils/_variables.scss";
-@import "../sass/utils/_typography.scss";
+@import "./utils/_variables.scss";
+@import "./utils/_typography.scss";
+@import "./utils/_mixin";
 
 
-@mixin link-footer {
-    gap: 10px;
-    display: flex;
-    align-items: center;
-
-}
-
-@mixin text-form {
-    margin: 0px;
-    text-align: center;
-    padding-bottom: 12px;
-}
 
 
 
@@ -139,6 +128,11 @@ body {
 a {
     text-decoration: none;
     cursor: pointer;
+    color: $color-link;
+
+    &:hover {
+        color: $color-hover;
+    }
 }
 
 .list-resto {
@@ -229,8 +223,7 @@ a {
         
         
         &:hover {
-            color:$color;
-            margin: $margin;
+            color:$color-hover;
         }
     }
 }
