--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,7 +2,7 @@ $color-primaire: #9356dc;
 $color-secondaire: #ff79da;
 $color-tertiaire: #99e2d0;
 $background-gris-clair: #e7e4e4a6;
-$color: blue;
+$color-hover: #000;
 $color-link: #fff;
 $background-footer: #464646;
 $ombre-btn: #cac8c8b8;
