--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2,272 +2,11 @@
 @import "./utils/_typography.scss";
 @import "./utils/_mixin";
 
+@import "./components/form_accueil";
+@import "./components/list-resto";
+@import "./components/ancre_body";
+@import "./components/explication_fonctionnement";
+@import "./components/recherche_accueil";
 
-
-
-
-body {
-    margin: nth($list: $margin, $n: 1);
-    font-family: roboto;
-}
-.image-header {
-    text-align: center;
-    padding-top: nth($list: $padding, $n: 3);
-    padding-bottom: nth($list: $padding, $n: 5);
-
-    &__logo {
-        width: 50%;
-    }
-}
-.formulaire {
-    display: flex;
-    flex-direction: column;
-}
-
-.recherche {
-    background-color: $background-gris-clair;
-    box-shadow: inset darken($background-gris-clair, 15%) 1px 4px 4px;
-    padding: nth($list: $padding, $n: 6);
-    gap: 10px;
-    display: flex;
-    justify-content: center;
-
-    &__adresse {
-        background-color: initial;
-        border: none;
-        font-weight: 700;
-    }
-}
-
-.form {
-    background-color: #f2f2f299;
-    display: flex;
-    flex-direction: column;
-    padding: 36px 21px 45px 21px;
-
-    &__title {
-        @include text-form;
-    }
-
-    &__subtitle {
-        @include text-form;
-    }
-
-    &__btn {
-        text-align: center;
-        padding-top: nth($list: $padding, $n: 2);
-    }
-
-    .btn-explorez {
-        border: none;
-        font-family: "roboto";
-        color: #fff;
-        font-size: nth($list: $size, $n: 2);
-        background-color: aqua;
-        border-radius: 25px;
-        width: 72%;
-        padding: nth($list: $padding, $n: 2);
-        cursor: pointer;
-        background: linear-gradient($color-secondaire, $color-primaire);
-
-        &:hover {
-            box-shadow: darken($ombre-btn, 30%) 0px 5px 9px;
-            background: linear-gradient(lighten($color-secondaire, 4%), lighten($color-primaire, 4%));
-        }
-    }
-}
-
-.fonctionnement {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: nth($list: $padding, $n: 7);
-    margin-bottom: nth($list: $margin, $n: 2);
-
-    &__title {
-        font-weight: 700;
-    }
-}
-
-.btn-acceuil {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    flex-wrap: wrap;
-
-    &__menu {
-        background-color: rgba(240, 240, 240, 0.4705882353);
-        box-shadow: rgb(202 200 200 / 72%) 0px 5px 9px;
-        padding: nth($list: $padding, $n: 8);
-        margin-bottom: nth($list: $margin, $n: 3);
-        border-radius: 16px;
-        border: none;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 14px;
-
-        .number {
-            border: 2px solid $color-primaire;
-            padding: 5px 7px 2px 7px;
-            border-radius: 25px;
-            margin: 0;
-            position: absolute;
-            left: 7px;
-            background: $color-primaire;
-            color: $color-link;
-        }
-    
-        &--3 {
-            background: lighten($color-primaire, 35%);
-        }
-
-        .color {
-            color: gray;
-            font-size: nth($list: $size, $n: 3);
-
-            &--3 {
-                color: $color-primaire;
-            }
-        }
-    }
-}
-a {
-    text-decoration: none;
-    cursor: pointer;
-    color: $color-link;
-}
-
-.list-resto {
-    background-color: $background-gris-clair;
-    padding: 20px;
-
-
-    .restaurant {
-        display: flex;
-        flex-direction: column;
-
-        &__article {
-            width: 100%;
-            margin-bottom: 20px;
-        }
-
-        &__cards {
-            margin: 0px;
-            background-color: #fff;
-            border-radius: 20px;
-
-            &:hover {
-                box-shadow: darken($ombre-btn, 30%) 0px 5px 9px;
-            }
-
-            .nouveau {
-                font-weight: 600;
-                font-size: 14px;
-                height: 14px;
-                color: #069a4b;
-                position: absolute;
-                right: 10%;
-                background: #8af7dd;
-                border: 2px #8af7dd solid;
-                padding: 7px;
-            }
-        }
-
-        &__photo {
-            object-fit: cover;
-            height: 144px;
-            width: 100%;
-            border-radius: 20px 20px 0px 0px;
-        }
-
-        &__nom {
-            display: flex;
-            flex-direction: column;
-            gap: 3px;
-            padding: 12px;
-            color: black;
-
-        }
-
-        .heart {
-            @include icon-heart;
-            z-index: 3;
-
-            &:hover {
-                color: white;
-                z-index: 2;
-            }
-        }
-
-        .heart-hover {
-            color: white;
-            @include icon-heart;
-            z-index: 2;
-
-            &:hover {
-                z-index: 3;
-                background: linear-gradient($color-primaire, $color-secondaire);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
-        }
-
-        & h4 {
-            margin: nth($list: $margin, $n: 1);
-        }
-
-        & h5{
-            margin: nth($list: $margin, $n: 1);
-            font-size: 15px;
-            font-weight: normal;
-        }
-    }
-}
-
-.footer {
-    background-color: $background-footer;
-    padding: nth($list: $padding, $n: 2);
-
-    &__title {
-        @include police-titre;
-        margin: nth($list: $margin, $n: 1);
-        padding-bottom: nth($list: $padding, $n: 3);
-        font-weight: normal;
-    }    
-}
-.menu-footer {
-    list-style-type: none;
-    padding-left: nth($list: $padding, $n: 1);
-    margin: nth($list: $margin, $n: 1);
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-
-    &__link {
-        color: $color-link;
-        font-size: nth($list: $size, $n: 2);
-
-        &:hover a {
-            color:  $color-primaire;
-        }
-        
-        &--icon {
-            @include link-footer;
-        
-            .fa-utensils {
-                font-size: nth($list: $size, $n: 3);
-            }
-            .fa-handshake-angle {
-                font-size: nth($list: $size, $n: 1);
-            }
-        }
-        
-        
-        &:hover {
-            color:$color-primaire;
-        }
-    }
-}
+@import "./layouts/header";
+@import "./layouts/footer";
