--- a/css/styles.css
+++ b/css/styles.css
@@ -87,24 +87,24 @@
   padding: 12px;
   color: black;
 }
-.list-resto .restaurant .heart {
+.list-resto .restaurant .heart-index {
   position: absolute;
   right: 10%;
   font-size: 26px;
   z-index: 3;
 }
-.list-resto .restaurant .heart:hover {
+.list-resto .restaurant .heart-index:hover {
   color: white;
   z-index: 2;
 }
-.list-resto .restaurant .heart-hover {
+.list-resto .restaurant .heart-hover-index {
   color: white;
   position: absolute;
   right: 10%;
   font-size: 26px;
   z-index: 2;
 }
-.list-resto .restaurant .heart-hover:hover {
+.list-resto .restaurant .heart-hover-index:hover {
   z-index: 3;
   background: linear-gradient(#9356dc, #ff79da);
   -webkit-background-clip: text;
@@ -189,7 +189,6 @@ a {
   background-color: rgba(231, 228, 228, 0.6509803922);
   box-shadow: inset rgba(195, 188, 188, 0.6509803922) 1px 4px 4px;
   padding: 16px;
-  gap: 10px;
   display: flex;
   justify-content: center;
 }
@@ -197,12 +196,37 @@ a {
   background-color: initial;
   border: none;
   font-weight: 700;
+  text-align: center;
+  font-family: "roboto";
+  font-size: 16px;
+}
+
+.image_restaurant {
+  width: 100%;
+  height: 230px;
+  object-fit: cover;
+}
+
+.heart {
+  position: absolute;
+  right: 10%;
+  font-size: 26px;
 }
 
 .image-header {
   text-align: center;
   padding-top: 20px;
   padding-bottom: 6px;
+}
+.image-header .arrow-left {
+  font-size: 20px;
+  float: left;
+  padding-left: 20px;
+  padding-top: 8px;
+  color: #464646;
+}
+.image-header .arrow-left:hover {
+  color: #ff79da;
 }
 .image-header__logo {
   width: 50%;
