--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,12 +1,14 @@
 @import "./utils/_variables.scss";
 @import "./utils/_typography.scss";
-@import "./utils/_mixin";
+@import "./utils/_mixin.scss";
 
-@import "./components/form_accueil";
-@import "./components/list-resto";
-@import "./components/ancre_body";
-@import "./components/explication_fonctionnement";
-@import "./components/recherche_accueil";
+@import "./components/form_accueil.scss";
+@import "./components/list-resto.scss";
+@import "./components/ancre_body.scss";
+@import "./components/explication_fonctionnement.scss";
+@import "./components/recherche_accueil.scss";
 
-@import "./layouts/header";
-@import "./layouts/footer";
+@import "./components/palette_du_gout.scss";
+
+@import "./layouts/header.scss";
+@import "./layouts/footer.scss";
