--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -11,7 +11,7 @@
     padding-bottom: 12px;
 }
 
-@mixin icon-heart {
+@mixin icon-heart-index {
     position: absolute;
     right: 10%;
     font-size: 26px;
