--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,4 +9,4 @@ $ombre-btn: #cac8c8b8;
 
 $margin: 0px 20px 24px;
 $padding: 0px 14px 20px 10px 6px 16px 18px 25px;
-$size: 11px 15px 16px 17px;
+$size: 11px 15px 16px 17px 20px;
